--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -127,3 +127,88 @@ a:hover {
   letter-spacing: 0.01em;
   color: #48484D;
 }
+
+.par-acc {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 26px;
+  letter-spacing: 0.01em;
+  color: #48484D;
+}
+
+.total-amt {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 26px;
+  line-height: 39px;
+  letter-spacing: 0.01em;
+  color: #1C223C;
+  margin-top: 5px;
+}
+
+.summary-card {
+  background: #FFFFFF;
+  box-shadow: 0px 2px 10px -2px rgba(24, 39, 75, 0.12), 0px 4px 4px -2px rgba(24, 39, 75, 0.08);
+  border-radius: 5px;
+  height: 239px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.summary-card-bal {
+  background: #FFFFFF;
+  box-shadow: 0px 2px 10px -2px rgba(24, 39, 75, 0.12), 0px 4px 4px -2px rgba(24, 39, 75, 0.08);
+  border-radius: 5px;
+  height: 239px;
+  padding: 15px;
+}
+
+@media only screen and (max-width:1024px) {
+  .summary-card-bal {
+    height: 350px;
+  }
+}
+
+.accounts {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 26px;
+  letter-spacing: 0.01em;
+  color: #0000E0;
+  background: #CCCCF9;
+  border-radius: 28px;
+  padding: 3px 8px;
+}
+
+.summary-card-bal a {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 26px;
+  letter-spacing: 0.01em;
+}
+
+.prices {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 22px;
+  letter-spacing: 0.015em;
+  color: #008A00;
+}
+
+.analytics {
+  border-radius: 4px 4px 0px 0px;
+  background-color: white;
+}
+
+.graph-area {
+  background: #FFFFFF;
+  box-shadow: 0px 2px 10px -2px rgba(24, 39, 75, 0.12), 0px 4px 4px -2px rgba(24, 39, 75, 0.08);
+  border-radius: 0px 0px 4px 4px;
+
+}
