--- a/src/components/Navbar/index.css
+++ b/src/components/Navbar/index.css
@@ -1,5 +1,5 @@
 .new-bg {
-    padding: 10px 0px !important;
+    padding: 20px 0px !important;
     box-shadow: 0px 2px 3px -2px rgba(24, 39, 75, 0.04), 0px 2px 4px -2px rgba(24, 39, 75, 0.08);
 }
 
@@ -10,25 +10,121 @@
     display: none;
 }
 
-
 .navbar-brand {
     font-size: 15px !important;
-}
-
-.navbar .title {
-    font-style: normal;
-    font-weight: 500;
-    line-height: 22px;
-    color: #6F6C99;
-    text-transform: capitalize;
 }
 
 .notify-text {
     font-style: normal;
     font-weight: normal;
-    font-size: 13px;
-    line-height: 20px;
-    color: #383749;
+    font-size: 16px;
+    letter-spacing: 0.01em;
+    color: #48484D;
+}
+
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 29px;
+    bottom: -1px;
+    vertical-align: middle;
+    height: 10.5px;
+}
+
+.switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+.sliderswitch {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: -2.73px;
+    -webkit-transition: .4s;
+    transition: .4s;
+
+    background: #FFFFFF;
+    border: 1.5px solid #616474;
+}
+
+.sliderswitch:before {
+    position: absolute;
+    content: "";
+    height: 12px;
+    width: 12px;
+    left: 0px;
+    bottom: -0.9px;
+    background-color: #616474;
+    /* box-shadow: 0px 0px 3.89px 1px rgb(255 172 172 / 35%); */
+    transition: .4s;
+}
+
+input:checked+.sliderswitch {
+    background-color: white;
+}
+
+input:focus+.sliderswitch {
+    box-shadow: none;
+}
+
+input:checked+.sliderswitch:before {
+    -webkit-transform: translateX(16px);
+    -ms-transform: translateX(16px);
+    transform: translateX(16px);
+    background-color: #616474;
+}
+
+/* Rounded sliders */
+.sliderswitch.round {
+    border-radius: 34px;
+}
+
+.sliderswitch.round:before {
+    border-radius: 50%;
+}
+
+.navbar-nav .notify-items {
+    margin-left: 15px;
+}
+
+.abs-center-x {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.has-search .form-control {
+    padding-left: 2.375rem;
+    background: #F4F6F8 !important;
+    border-radius: 4px !important;
+    border: none !important;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    letter-spacing: 0.01em;
+    color: #707070;
+}
+
+.has-search .form-control:focus {
+    outline: none !important;
+    border: none !important;
+    box-shadow: none !important;
+}
+
+.has-search .form-control-feedback {
+    position: absolute;
+    z-index: 2;
+    display: block;
+    width: 2.375rem;
+    height: 2.375rem;
+    line-height: 2.375rem;
+    text-align: center;
+    pointer-events: none;
+    color: #aaa;
 }
 
 @media (min-width: 320px) and (max-width: 480px) {
