--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -201,6 +201,20 @@ a:hover {
   color: #008A00;
 }
 
+.summary-card-vol {
+  background: #FFFFFF;
+  box-shadow: 0px 2px 10px -2px rgba(24, 39, 75, 0.12), 0px 4px 4px -2px rgba(24, 39, 75, 0.08);
+  border-radius: 5px;
+  height: 239px;
+  padding: 15px;
+}
+
+@media only screen and (max-width:1024px) {
+  .summary-card-vol {
+    height: 250px;
+  }
+}
+
 .analytics {
   border-radius: 4px 4px 0px 0px;
   background-color: white;
@@ -210,5 +224,20 @@ a:hover {
   background: #FFFFFF;
   box-shadow: 0px 2px 10px -2px rgba(24, 39, 75, 0.12), 0px 4px 4px -2px rgba(24, 39, 75, 0.08);
   border-radius: 0px 0px 4px 4px;
+  position: relative;
+}
 
+.divider {
+  position: absolute;
+  height: 94px;
+  width: 1px;
+  background: #ECECEF;
+  top: 100px;
+  left: 39%;
+}
+
+@media only screen and (max-width:1024px) {
+  .divider {
+    display: none;
+  }
 }
